cmake_minimum_required(VERSION 3.12)
project(Adventure)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")

add_subdirectory(lib)
add_subdirectory(tools)

# add_executable(test
#         main.cpp
#         )

# target_link_libraries(test
#         enum
#         networking
#         user
#         mud)

